// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chrome renders RTL styling 1`] = `
<div
  className="c-chrome is-rtl "
  data-garden-id="chrome.chrome"
  data-garden-version="version"
/>
`;

exports[`Chrome renders default styling 1`] = `
<div
  className="c-chrome "
  data-garden-id="chrome.chrome"
  data-garden-version="version"
/>
`;
